# sedona-spatialbench

./: .asf.yaml  .gitignore  404.html  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  README.md  SPIDER.md  TESTING.md  geopandas.py  index.html  mkdocs.yml  objects.inv  print_queries.py  requirements-docs.txt  spatialbench-config.yml  tpchgen-rs-readme.md
.github/workflows/: packaging.yml  rust.yml  spatialbench-cli-publish-pypi.yml
benchmarks/: BENCHMARKS.md  parquet_spatialbench.sh  tbl_spatialbench.sh  tbl_spatialbench_1.sh
datasets-generators/: index.html
docs/: datasets-generators.md  index.md  overview-methodology.md  requirements.txt
docs/get-started/: overview.md
overview-methodology/: index.html
raster/: generator.py
search/: search_index.json
spatialbench/: Cargo.toml
spatialbench-arrow/: Cargo.toml  README.md
spatialbench-arrow/src/: building.rs  conversions.rs  customer.rs  driver.rs  lib.rs  trip.rs  vehicle.rs  zone.rs
spatialbench-arrow/tests/: reparse.rs
spatialbench-cli/: CONFIGURATION.md  Cargo.toml  README.md  pyproject.toml
spatialbench-cli/src/: csv.rs  generate.rs  main.rs  parquet.rs  plan.rs  spatial_config_file.rs  spider_config_file.rs  statistics.rs  tbl.rs
spatialbench-cli/tests/: cli_integration.rs
spatialbench/src/: csv.rs  dates.rs  decimal.rs  generators.rs  lib.rs  spider.rs  spider_defaults.rs  spider_overrides.rs
spatialbench/src/spatial/: cache.rs  config.rs  defaults.rs  distributions.rs  generator.rs  geometry.rs  mod.rs  overrides.rs
spatialbench/src/spatial/utils/: affine.rs  continent.rs  mod.rs  random.rs
spatialbench/tests/: integration_tests.rs
stylesheets/: extra.css
tpchgen/: Cargo.toml
tpchgen-arrow/: Cargo.toml  README.md
tpchgen-arrow/src/: building.rs  conversions.rs  customer.rs  driver.rs  lib.rs  lineitem.rs  nation.rs  order.rs  region.rs  trip.rs  vehicle.rs  zone.rs
tpchgen-arrow/tests/: reparse.rs
tpchgen-cli/: CONFIGURATION.md  Cargo.toml  README.md  pyproject.toml
tpchgen-cli/src/: csv.rs  main.rs  parquet.rs  plan.rs  spatial_config_file.rs  tbl.rs
tpchgen-cli/tests/: cli_integration.rs
tpchgen/src/: csv.rs  dates.rs  generators.rs  kde.rs  kde_nonarrow.rs  lib.rs  spider.rs  spider_presets.rs
tpchgen/src/spatial/: generator.rs  mod.rs
tpchgen/tests/: integration_tests.rs
