[workspace]

members = [ "tpchgen" , "tpchgen-arrow", "tpchgen-cli"]

resolver = "2"

[workspace.package]
authors = ["clflushopt", "alamb"]
edition = "2021"
homepage = "https://github.com/clflushopt/tpchgen-rs"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/clflushopt/tpchgen-rs"
version = "1.1.0"

[workspace.dependencies]
geo = "0.30.0"
geozero = { version = "0.14.0", features = ["with-wkb", "with-geo"]}

[profile.release]
strip = "debuginfo"
