[workspace]

members = ["spatialbench", "spatialbench-arrow", "spatialbench-cli"]

resolver = "2"

[workspace.package]
authors = ["clflushopt", "alamb"]
edition = "2021"
homepage = "https://github.com/wherobots/sedona-spatialbench"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/wherobots/sedona-spatialbench"
version = "1.1.1"

[workspace.dependencies]
geo = "0.30.0"
geozero = { version = "0.14.0", features = ["with-wkb", "with-geo"]}

[profile.release]
strip = "debuginfo"
