[package]
name = "tpchgen-arrow"
version = "1.1.1"
edition = "2024"
authors = ["clflushopt", "alamb"]
description = "TPC-H data generator into Apache Arrow format"
repository = "https://github.com/wherobots/sedona-tpchgen"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
arrow = { version = "55.2", default-features = false, features = ["prettyprint"] }
tpchgen = { path = "../tpchgen", version = "1.1.1" }
geo = { workspace = true }
geozero = { workspace = true }
[dev-dependencies]
arrow-csv = "55.2"
chrono = "0.4.39"
